--- a/Day21/EDAbivariate.ipynb
+++ b/Day21/EDAbivariate.ipynb
@@ -2,6 +2,185 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as  pd \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PassengerId</th>\n",
+       "      <th>Survived</th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Parch</th>\n",
+       "      <th>Ticket</th>\n",
+       "      <th>Fare</th>\n",
+       "      <th>Cabin</th>\n",
+       "      <th>Embarked</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>271</th>\n",
+       "      <td>272</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Tornquist, Mr. William Henry</td>\n",
+       "      <td>male</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>LINE</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>452</th>\n",
+       "      <td>453</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Foreman, Mr. Benjamin Laventall</td>\n",
+       "      <td>male</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>113051</td>\n",
+       "      <td>27.7500</td>\n",
+       "      <td>C111</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>675</th>\n",
+       "      <td>676</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Edvardsson, Mr. Gustaf Hjalmar</td>\n",
+       "      <td>male</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>349912</td>\n",
+       "      <td>7.7750</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>702</th>\n",
+       "      <td>703</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Barbara, Miss. Saiide</td>\n",
+       "      <td>female</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2691</td>\n",
+       "      <td>14.4542</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>515</th>\n",
+       "      <td>516</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Walker, Mr. William Anderson</td>\n",
+       "      <td>male</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>36967</td>\n",
+       "      <td>34.0208</td>\n",
+       "      <td>D46</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>460</th>\n",
+       "      <td>461</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Anderson, Mr. Harry</td>\n",
+       "      <td>male</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>19952</td>\n",
+       "      <td>26.5500</td>\n",
+       "      <td>E12</td>\n",
+       "      <td>S</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     PassengerId  Survived  Pclass                             Name     Sex  \\\n",
+       "271          272         1       3     Tornquist, Mr. William Henry    male   \n",
+       "452          453         0       1  Foreman, Mr. Benjamin Laventall    male   \n",
+       "675          676         0       3   Edvardsson, Mr. Gustaf Hjalmar    male   \n",
+       "702          703         0       3            Barbara, Miss. Saiide  female   \n",
+       "515          516         0       1     Walker, Mr. William Anderson    male   \n",
+       "460          461         1       1              Anderson, Mr. Harry    male   \n",
+       "\n",
+       "      Age  SibSp  Parch  Ticket     Fare Cabin Embarked  \n",
+       "271  25.0      0      0    LINE   0.0000   NaN        S  \n",
+       "452  30.0      0      0  113051  27.7500  C111        C  \n",
+       "675  18.0      0      0  349912   7.7750   NaN        S  \n",
+       "702  18.0      0      1    2691  14.4542   NaN        C  \n",
+       "515  47.0      0      0   36967  34.0208   D46        S  \n",
+       "460  48.0      0      0   19952  26.5500   E12        S  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"train (1).csv\")\n",
+    "df.sample(6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
